--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     
                 </div>
                 <div class="about-text">
-                    <p class="paragraph-indent">I'm a student in Ho Chi Minh City (Vietnam). My passion is <strong>Data Science</strong> with the long-term goal of applying technology to advance education and social development. My journey has been shaped not only by research and academic projects but also by initiatives I founded, including <strong>Cubebase - the Data Science Club</strong>, <strong>Woven Dreams</strong>, and <strong>Hand in Hand - Local Charity</strong>.</p>
+                    <p class="paragraph-indent">I'm a student in Ho Chi Minh City (Vietnam). My passion is <strong>Data Science</strong> with the long-term goal of applying technology to advance education and social development. My journey has been shaped not only by research and academic projects but also by initiatives I founded, including <strong>Cubebase - the Data Science Club</strong>, <strong>Woven Dreams</strong>, <strong>Hand in Hand - Local Charity</strong>, and <strong>Mầm Nắng</strong>.</p>
                     <p class="paragraph-indent">Outside of academics, I enjoy <strong>photography</strong> which keep me grounded and inspired. I value curiosity, empathy, and perseverance, qualities that shape both my personal growth and leadership style. Looking ahead, I aspire to <strong>advance education accessibility in Vietnam</strong> and beyond, using data-driven solutions to empower communities and bridge gaps in opportunity.</p>
                     </div>
                     </div>
