--- a/Dataclub.html
+++ b/Dataclub.html
@@ -3,51 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Woven Dreams</title>
+    <title>My Experiences</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <div class="cube-section">
-            <div class="cube-text">
-                <h1>Cubebase-Data Science club</h1>
+
+    <nav class="navbar">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="personalproject.html">Personal Projects</a></li>
+            <li><a href="Myexperiences.html">Experiences</a></li>
+            <li><a href="index.html#selectedprojects">Other Projects</a></li>
+        </ul>
+    </nav>
+
+    <header class="page-header">
+        <span class="big-script-title">CubeBase</span>
+        <span class="sub-script-title">Data Science Club</span>
+        <p class="header-subtitle">
+            Cubebase is a student-led data science club that equips students with analytical skills and hands-on experience, preparing them to tackle real-world challenges through data-driven solutions.
+    </header>
+
+   <section class="split-section">
+        <div class="split-image">
+            <img src="cube1.jpg" alt="CubeBase Activity">
+        </div>
+        
+        <div class="split-content">
+            <h2 class="section-heading">"Cubebase - Data Science Club"</h2>
+                <div class="job-block">
+                <h3 class="job-title">Hands-on analytics for real-world problems</h3>
+                <p class="job-meta">June 2024 - Present</p>
+                <ul class="custom-list">
+                    <li>We believe data is more than numbers—it is a tool to understand the world and create meaningful impact. By exploring data together, students gain both technical skills and critical perspectives.</li>
+                </ul>
             </div>
         </div>
-            <section>
-                <h2>What?</h2>
-                <ul>
-                    <p>Cubebase is a <strong>student-led data science club </strong> that equips students with analytical skills and hands-on experience, preparing them to tackle real-world challenges through data-driven solutions.</p>
-                </ul>
-            </section>
+    </section>
 
-            <section>
-                <h2>Why?</h2>
-                <ul>
-                    <p>We believe data is more than numbers—it is a tool to understand the world and create meaningful impact. By exploring data together, students <strong>gain both technical skills and critical perspectives.</strong></p>
-                </ul>
-            </section>
-
-            <section>
-                <h2>Our goals</h2>
-                <ol>
-                    <ul>
-                        <li>Collected and analyzed data from <strong>300+ students</strong> in remote areas, highlighting challenges in school attendance and access to education.</li>
-                        <li>Published <strong>2 data reports</strong> with actionable insights, proposing solutions such as scholarship allocation and community learning hubs.</li>
-                        <li>Presented findings to <strong>local educators and NGOs</strong>, influencing initiatives that <strong>supported 100+ underprivileged children</strong></li>
-                    </ul>
-                </ol>
-            </section>
-            <section class="gallery-section">
-                <div class="image-gallery">
-                    <img src="cube1.jpg">
-                    <img src="cube2.jpg">
-                    <img src="cube3.jpg">
-                    <img src="cube4.jpg">
-                    <img src="cube5.jpg">
-                </div>
-            </section>
+    <section class="split-section">
+        <div class="split-image">
+             <img src="cube2.jpg" alt="contributioncube">
         </div>
-        <footer id="contact-footer">
+        <div class="split-content">
+            <h2 class="section-heading">Our Contributions</h2>
+
+            <div class="job-block">
+                <ul class="custom-list">
+                    <li>Founded and led a club of 20+ members dedicated to applying data science for social good.</li>
+                    <li>Collected and analyzed data from 300+ students in remote areas, highlighting challenges in school attendance and access to education.</li>
+                    <li>Published 2 data reports with actionable insights, proposing solutions such as scholarship allocation and community learning hubs.</li>
+                    <li>Presented findings to local educators and NGOs, influencing initiatives that supported 100+ underprivileged children.</li>
+            </div>
+    </section>
+<footer id="contact-footer">
             <div class="contact-content-wrapper"> 
                 <div class="contact-left">
                     <p>Email: <a href="mailto:nghthu08@gmail.com">nghthu08@gmail.com</a></p>
@@ -61,6 +70,6 @@
                     <p>&mdash; Gandhi</p>
                 </div>
             </div>
-            </footer>
+                </footer>
+
 </body>
-</html>
