--- a/MN.html
+++ b/MN.html
@@ -3,51 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mầm nắng</title>
+    <title>My Experiences</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <div class="mn-section">
-            <div class="mn-text">
-                <h1>Mầm nắng</h1>
+
+    <nav class="navbar">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="personalproject.html">Personal Projects</a></li>
+            <li><a href="Myexperiences.html">Experiences</a></li>
+            <li><a href="index.html#selectedprojects">Other Projects</a></li>
+        </ul>
+    </nav>
+
+    <header class="page-header">
+        <span class="big-script-title">Mầm Nắng</span>
+        <p class="header-subtitle">
+            Mầm Nắng is a youth-led initiative dedicated to supporting children in remote highland areas through education and community engagement. By combining on-site volunteer activities with creative storytelling, the project provides essential learning materials while raising awareness about educational inequality.        </p>
+    </header>
+
+     <section class="split-section">
+        <div class="split-image">
+             <img src="mnimg-6.jpg" alt="why">
+        </div>
+        <div class="split-content">
+            <h2 class="section-heading">"Mầm Nắng"</h2>
+            <div class="job-block">
+                <h3 class="job-title">Youth initiative supporting highland children</h3>
+                <p class="job-meta">August 2024 - July 2025</p>
+                <ul class="custom-list">
+                    <li>Many children in isolated regions lack access to basic educational tools and opportunities. We believe that every child deserves the chance to learn, grow, and dream — no matter where they live. Through hands-on support and authentic storytelling, we aim to bridge this gap and inspire others to join in building a more equitable future.</li>
+                </ul>
             </div>
         </div>
-            <section>
-                <h2>What?</h2>
-                <ul>
-                    <p>Mầm Nắng is a youth-led initiative dedicated to supporting children in remote highland areas through education and community engagement. By combining on-site volunteer activities with creative storytelling, the project provides essential learning materials while raising awareness about educational inequality.</p>
-                </ul>
-            </section>
+    </section>
 
-            <section>
-                <h2>Why?</h2>
-                <ul>
-                    <p>Many children in isolated regions lack access to basic educational tools and opportunities. We believe that every child deserves the chance to learn, grow, and dream — no matter where they live. Through hands-on support and authentic storytelling, we aim to bridge this gap and inspire others to join in building a more equitable future.</p>
-                </ul>
-            </section>
-
-            <section>
-                <h2>Our goals</h2>
-                <ol>
-                    <ul>
-                        <li>Organize field trips to underserved regions to deliver essential learning materials and gifts (200+ distributed to date).</li>
-                        <li>Foster meaningful connections between volunteers and local students through <strong>interactive educational and cultural exchanges.</strong></li>
-                        <li>Use photography and storytelling to document the impact, sharing the journeys with an audience of <strong>3,000+ online followers</strong> to raise awareness and inspire continued community involvement.</li>
-                    </ul>
-                </ol>
-            </section>
-            <section class="gallery-section">
-                <div class="image-gallery">
-                    <img src="mn1.jpg">
-                    <img src="mn2.jpg">
-                    <img src="mn3.jpg">
-                    <img src="mn4.jpg">
-                    <img src="mn5.jpg">
-                </div>
-            </section>
+    <section class="split-section">
+        <div class="split-image">
+             <img src="mn3.jpg" alt="Leadership">
         </div>
-        <footer id="contact-footer">
+        <div class="split-content">
+            <h2 class="section-heading">Our Contributions</h2>
+
+            <div class="job-block">
+                <ul class="custom-list">
+                    <li>Directed a youth-led initiative project supporting children in remote areas through education and community activities.</li>
+                    <li>Organized 2 field trips to highland regions, delivering 200+ gifts and learning materials to underprivileged students.</li>
+                    <li>Documented the journeys through photography, producing a collection shared with 3,000+ online followers to raise awareness and inspire community engagement.</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+<footer id="contact-footer">
             <div class="contact-content-wrapper"> 
                 <div class="contact-left">
                     <p>Email: <a href="mailto:nghthu08@gmail.com">nghthu08@gmail.com</a></p>
@@ -61,7 +69,7 @@
                     <p>&mdash; Gandhi</p>
                 </div>
             </div>
-            </footer>
+                </footer>
 
 </body>
 </html>
